5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1594_2425.log
== TEST (2019-03-31 12:12:20) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c
print(round(cm,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:12:27) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c
print(round(cm,3))
-- EXECUTION TIME:
0.124175
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:13:23) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c
print(round(cm,3)"\km/l\")
-- ERROR:
File "XXXX", line 4
    print(round(cm,3)"\km/l\")
                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:14:02) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c
print(round(cm,3 "\km/l\"))
-- ERROR:
File "XXXX", line 4
    print(round(cm,3 "\km/l\"))
                              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:19:33) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c
print(round(cm,3 + "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm,3 + "km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:20:07) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c + "km/l"
print(round(cm,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = d / c + "km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:24:35) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c + km/l
print(round(cm,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = d / c + km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:24:59) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c 
print(round(cm,3 + km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm,3 + km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:25:28) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c , km/l
print(round(cm,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = d / c , km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:26:08) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c , km/l
print(round(cm,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = d / c , km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:29:36) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c 
x1 = "km/l"
print(round(cm + x1,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(cm + x1,3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:38:35) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c 
print(round(cm,3"km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(cm,3"km/l"))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:39:01) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c 
print(round(cm,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(cm,3)"km/l")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:39:09) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c 
print(round(cm,3)+"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm,3)+"km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:39:26) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = d / c 
print(round(cm,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:41:30) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) + ("km/l")
print(round(cm,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = ( d / c ) + ("km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:41:44) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) + (km/l)
print(round(cm,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cm = ( d / c ) + (km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:42:39) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
f = km/l
print(round(cm + f,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:43:33) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
f = (km/l)
print(round(cm + f,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = (km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:43:33) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
f = (km/l)
print(round(cm + f,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = (km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:43:33) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
f = (km/l)
print(round(cm + f,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = (km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:43:33) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
f = (km/l)
print(round(cm + f,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    f = (km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:44:03) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(round(,3))
-- ERROR:
File "XXXX", line 4
    print(round(,3))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:44:10) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(round(cm,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:44:14) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(round(cm,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:44:39) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(round(cm,3 km/l))
-- ERROR:
File "XXXX", line 4
    print(round(cm,3 km/l))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:44:55) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(round(cm,3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(cm,3 "km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:45:06) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(round(cm,3 + "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm,3 + "km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:47:52) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(round("KM/L" , cm,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("KM/L" , cm,3))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:48:59) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print("KM/L"round(cm,3))
-- ERROR:
File "XXXX", line 4
    print("KM/L"round(cm,3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:49:10) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print("km/l"round(cm,3))
-- ERROR:
File "XXXX", line 4
    print("km/l"round(cm,3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:49:32) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(round(cm,3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(cm,3 "km/l"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:49:43) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(round(cm,3 +  "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cm,3 +  "km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:50:34) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print(round(cm,3 + (a)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(cm,3 + (a)))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:50:49) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print(round(cm,3 + a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(cm,3 + a))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:51:15) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print(round(cm + a,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(cm + a,3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:51:44) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print(a)
-- OUTPUT:
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:52:24) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print(round(cm + a)
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:52:32) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print(round(cm+a)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:52:44) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print(round(cm+(a))
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:53:06) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print(round(cm)+(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(cm)+(a))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:53:34) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print(cm+a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(cm+a)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:53:53) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print((cm)+a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((cm)+a)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:54:05) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print((cm)+(a)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:54:08) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print((cm)+(a)
-- ERROR:
File "XXXX", line 6
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:54:13) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
a = ("km/l")
print((cm)+(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((cm)+(a))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:54:48) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print( "km/l" + cm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print( "km/l" + cm)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:55:20) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(cm + km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(cm + km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:55:33) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(cm + km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(cm + km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:55:50) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(cm + (km/l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(cm + (km/l))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:56:37) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
frase = "km/l"
print(cm + frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(cm + frase)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:57:12) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
cm = ( d / c ) 
print(cm + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(cm + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:20:11) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
 print(round(d/c,3)"km/l")
-- ERROR:
File "XXXX", line 3
    print(round(d/c,3)"km/l")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:22:57) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
 print(round(d*c,3)"km/l")
-- ERROR:
File "XXXX", line 3
    print(round(d*c,3)"km/l")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:23:08) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
 print(round(d*c,3))
-- ERROR:
File "XXXX", line 3
    print(round(d*c,3))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:23:30) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
x= d*c
 print(round(x,3))
-- ERROR:
File "XXXX", line 4
    print(round(x,3))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:23:55) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
x = d*c
 print(round(x,3))
-- ERROR:
File "XXXX", line 4
    print(round(x,3))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:24:21) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d*c
 print(round(a,3))
-- ERROR:
File "XXXX", line 4
    print(round(a,3))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:24:47) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d*c
 print(round ( a , 3 )
-- ERROR:
File "XXXX", line 4
    print(round ( a , 3 )
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:24:54) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d*c
 print(round ( a , 3 ))
-- ERROR:
File "XXXX", line 4
    print(round ( a , 3 ))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:25:07) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d*c
 print(round ( a , 3 ))
-- ERROR:
File "XXXX", line 4
    print(round ( a , 3 ))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:25:38) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d*c
 print(round(a,3))
-- ERROR:
File "XXXX", line 4
    print(round(a,3))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:25:47) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d*c
print(round(a,3))
-- OUTPUT:
57.144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:25:55) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d*c
print(round(a,3))
-- OUTPUT:
57.144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:26:09) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:26:26) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/500
c
print(round(a,3)"km/l")
-- ERROR:
File "XXXX", line 5
    print(round(a,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:26:40) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/500
c
print(round(a,3)*"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(a,3)*"km/l")
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:27:00) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/500
c
print(round(a,3)+"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(a,3)+"km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:27:20) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/500
c
print("km/l"round(a,3))
-- ERROR:
File "XXXX", line 5
    print("km/l"round(a,3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:27:43) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/500
c
print(round(a,3)+("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(a,3)+("km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:28:07) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/500
c
print(round(a,3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(a,3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:29:10) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(a,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:29:25) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3)+km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(a,3)+km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:31:31) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(a,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:31:40) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3)+"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(a,3)+"km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:31:50) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3)+"km/l")
-- EXECUTION TIME:
0.15665
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 4, in <module>
    print(round(a,3)+"km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:32:13) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print("km/l"round(a,3))
-- ERROR:
File "XXXX", line 4
    print("km/l"round(a,3))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:35:20) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3+"km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(a,3+"km/l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:35:55) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3)+("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(a,3)+("km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:36:14) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(a,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:10:54) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:11:03) 
-- CODE:
d = float(input("d:"))
c = float(input("c:"))
a = d/c
print(round(a,3),"km/l")
-- EXECUTION TIME:
0.135768
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
